Changelog
=========


1.3.5 (unreleased)
------------------

- Remove accessibility zoom feature, since the browsers can do it better. [mathias.leimgruber]

- Remove customization of actions. [busykoala]

- Support new SL async layouts. [mathias.leimgruber]


1.3.4 (2017-09-11)
------------------

- Fix search position on mobile devices after scrolling. [mathias.leimgruber]

- No longer open overlay on mobile devices (phone). [mathias.leimgruber]

- Remove superfluous margin of textblock. [mbaechtold]

- Remove min-height on sl-column. the simplelayout.scss already does this for us. [mathias.leimgruber]

- Enable selection of navigation access key. [mbaechtold]


1.3.3 (2017-06-02)
------------------

- Fix poitioning issues with the mobile search. [mathias.leimgruber]

- Fix xhtml error in overriden plonebrowser.htm.pt [mathias.leimgruber]

- Add dependency for ftw.subsite because the pathbar viewlet doesn't work
  without this package installed. [raphael-s]

- Hide the additional logo if the class ".hide" is present (only for mobile
  screens). [mbaechtold]

- Fix label of form field used to set the footer background
  color. [mbaechtold]


1.3.2 (2017-04-11)
------------------

- Move buttons of content tree widget so they no longer hide
  the last item. [mbaechtold]


1.3.1 (2016-11-09)
------------------

- Fix left margin of external-site icon
  [raphael-s]


1.3.0 (2016-11-07)
------------------

- Release 1.2.1 is a feature release. 1.2.1 = 1.3.0
  [raphael-s]


1.2.1 (2016-11-07)
------------------

- Fix margin bottom of open in overlay indicator (ftw.simplelayout).
  [mathias.leimgruber]

- Add spinner support for ajax request (ftw.simplelayout).
  [mathias.leimgruber]

- Style referencebrowser overlay.
  [mathias.leimgruber]

- Reduce general spacing right/left for overlays. This means more space for the overlay content.
  [mathias.leimgruber]

- Replace ftw.mobilenavigation with ftw.mobile.
  [mathias.leimgruber]


1.2.0 (2016-10-11)
------------------