@@ -4,8 +4,17 @@ $portal-top-bg-color: $page-bg-color !default;
   portal-top-bg-color);
 
 #portal-top-wrapper {
+
+  ~ #container {
+    margin-top: $size-mobile-button;
+  }
+
   @include screen-large {
     background-color: white;
+
+    ~ #container {
+      margin-top: 0;
+    }    
   }
 }
 
@@ -14,13 +23,19 @@ $portal-top-bg-color: $page-bg-color !default;
   padding: 0;
   max-width: $page-wrapper-width;
   margin: 0 auto;
-  position: relative;
+  position: fixed;
+  height: $size-mobile-button;
+  width: 100%;
+  z-index: 10;
   font-size: $font-size-small;
   @include clearfix();
 
   @include screen-large {
     background-color: white;
     padding: 7px 0;
+    position: relative;
+    z-index: 0;
+    height: auto;
   }
 }
 
