@@ -5,6 +5,8 @@ Changelog
 1.3.5 (unreleased)
 ------------------
 
+- Implement sticky mobile header. [mathias.leimgruber]
+
 - Remove accessibility zoom feature, since the browsers can do it better. [mathias.leimgruber]
 
 - Remove customization of actions. [busykoala]
